PR5 fixing overflow on windows

--- a/src/style/main.less
+++ b/src/style/main.less
@@ -263,6 +263,7 @@ section::after {
     .lox-detail.active,
     .hull-detail.active,
     .hav-detail.active {
+        overflow: auto;
         max-height: 1000px;
     }
 }
